# qt-rgb-led

./: .gitignore  CMakeLists.txt  GifPlayer.cpp  GifPlayer.h  LedTextDisplay.h  README.md  SerialReader.cpp  SerialReader.h  install.txt  main.cpp  patch.diff
fonts/: ComicNeue-Bold-48.bdf  ComicNeue-Regular-20.bdf
scripts/: build.sh
